[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osint-engine"
version = "0.1.0"
description = "Phase 1 OSINT collection engine with crt.sh connector"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "dnspython>=2.6",
    "httpx>=0.27",
    "pydantic>=2.7",
    "structlog>=24.1",
]

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.20",
]
test = [
    "neo4j>=5.20",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
osint = "osint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/osint"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
